# airtis

./: package-lock.json
ai/: .gitignore  Pipfile  README  image2text.py  pictionary.py  text2image.py
diffusion/: pyproject.toml
scripts/: gen.sh  test.csv
ui/: Dockerfile  Makefile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.cjs  vite.config.ts
ui/kube/: deployment.yaml  ingress.yaml  proxy-config.yaml  proxy-deployment.yaml  proxy-service.yaml  service.yaml
ui/src/: App.css  App.tsx  state.ts
ui/src/api/: index.ts
ui/src/components/: result-dialog.tsx  search-dropdown.tsx
ui/src/pages/: home.tsx  index.tsx  play.tsx  result.tsx
