[tool.poetry]
name = "diffusion"
version = "0.1.0"
description = ""
authors = ["Andy Yu <andyyu2004@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
diffusers = {extras = ["torch"], version = "^0.7.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
